--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.2.0
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  firebase_core: ^4.4.0
 
 dev_dependencies:
   flutter_test:
