--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   equatable: ^2.0.5
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
-
+  shared_preferences: ^2.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
