--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
   shared_preferences: ^2.2.3
+  cloud_firestore: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
